fix out of bounds icon
rancher/rancher#13673

--- a/app/styles/components/_github-avatar.scss
+++ b/app/styles/components/_github-avatar.scss
@@ -47,6 +47,12 @@ $size: 35px;
   }
 }
 
+.site-access {
+  .gh-block {
+    width: calc(100% + 5px);
+  }
+}
+
 
 .gh-avatar {
   width: $size;
